# ds18b20-example

./: Cargo.toml  README.md  openocd.gdb
.cargo/: config
src/: main.rs
